<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">REP管理系统</string>
    <string name="titile_login">登陆</string>
    <string name="ichart_login">体检报告</string>
    <string name="titile_savadata">数据收集</string>
    <string name="titile_forgetpass">忘记密码</string>
    <string name="titile_adddata">完善信息</string>
    <string name="titile_regiest">免费注册</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="parse">分析</string>
    <string name="lishi2">历史</string>
    <string name="regiest">注册</string>
    <string name="current_time">当前时间段：</string>
    <string name="comein_num">进出顾客数：</string>
    <string name="intrest_num">询问过或摸过商品3秒以上的顾客数：</string>
    <string name="try_num">试穿、试戴的顾客数：</string>
    <string name="buy_num">购买人数(小票数量)：</string>
    <string name="old_num">老顾客购买人数：</string>
    <string name="zero">0</string>
    <string name="pass">密码：</string>
    <string name="pass2">请输入密码</string>
    <string name="new_pass2">请输入新密码</string>
    <string name="user">用户名：</string>
    <string name="user2">请输入手机号码</string>
    <string name="pass_confirm">确认密码：</string>
    <string name="get_code">获取验证码</string>
    <string name="code">验证码：</string>
    <string name="finish">完成</string>
    <string name="phone">手机号码：</string>
    <string name="makesure">确定</string>
    <string name="price">主力产品单价：</string>
    <string name="price2">请输入主力产品单价</string>
    <string name="worktime">营业时间：</string>
    <string name="worktime2">请输入营业时间(非时间段)</string>
    <string name="weekend">假日人流量*：</string>
    <string name="weekend2">请输入假日人流量</string>
    <string name="worknum">工作日人流量*：</string>
    <string name="worknum2">请输入工作日人流量</string>
    <string name="brandtype">品类：</string>
    <string name="brandtype2">请输入品类</string>
    <string name="brandname">经营品牌：</string>
    <string name="brandname2">请输入经营品牌</string>
    <string name="message1">*:必填选项</string>
    <string name="message2">其他选项可选填，也可以通过邮件告知，由R.E.P公司进行填写.</string>
    <string name="tijian">体检报告</string>
    <string name="lishi">历史记录</string>
    <string name="config_time">设置提醒时间</string>
    <string name="item1">数据收集</string>
    <string name="item2">基本体检</string>
    <string name="item3">知识分享</string>
    <string name="item4">更多</string>
    <string name="city">所在城市：</string>
    <string name="score">积分：</string>
    <string name="city2">请手动输入所在城市名</string>
    <string name="tip1">进店人数：</string>
    <string name="tip2">感兴趣人数：</string>
    <string name="tip3">试穿、试戴人数</string>
    <string name="tip4">购买人数</string>
    <string name="tip5">老顾客购买人数</string>
    <string name="tip1_2">进店所有顾客数</string>
    <string name="tip2_2">摸过商品连续3秒以上或者询问过商品的顾客</string>
    <string name="tip6">以上数据每次仅限15分钟内</string>
    <string name="tip7">我已知晓，跳过</string>
    <string name="update_mydata">修改我的资料</string>
    <string name="about1">设备简介</string>
    <string name="about2">在线诊断</string>
    <string name="about3">专家会诊</string>
    <string name="about4">我的资料</string>
    <string name="tip_title">数据收集五项指标</string>
    <string name="history_title">基本体检</string>
    <string name="zhishi_title">知识分享</string>
    <string name="about_title">关于</string>
    <string name="device_title">设备列表</string>
    <string name="benzhou_title">本周数据收集记录</string>
    <string name="config_tip">设置提醒时间</string>
    <string name="config_tip2">一周指标检测提醒</string>
    <string name="tip_way">设置提醒方式</string>

</resources>