<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <com.rep.util.ActionBar
        android:id="@+id/tip_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/center_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/r1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/textstyle3"
                android:text="@string/tip1" />

            <TextView
                style="@style/textstyle4"
                android:hint="@string/tip1_2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_margin_top2" >

            <TextView
                style="@style/textstyle3"
                android:text="@string/tip2" />

            <TextView
                style="@style/textstyle4"
                android:hint="@string/tip2_2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_margin_top2" >

            <TextView
                style="@style/textstyle3"
                android:text="@string/tip3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" >

            <TextView
                style="@style/textstyle3"
                android:text="@string/tip4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_margin_top2" >

            <TextView
                style="@style/textstyle3"
                android:text="@string/tip5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tip6"
                android:textColor="@color/orange" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_margin_top2"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/goon"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/corners_bg"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:text="@string/tip7" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>